--- a/style.css
+++ b/style.css
@@ -1,28 +1,92 @@
 :root {
-    --main-text-color: white;
+    --main-text-color: rgb(221, 221, 200);
+    --button-bg-color: #018a77;
 }
 
 html {
     height: 100%;
+    font-family: 'Inter', sans-serif;
+}
+
+h1 {
+    margin: 0 0 1rem 0;
+    padding: 0;
 }
 
 body {
-    background-color: rgb(17, 30, 70);
+    background-image: linear-gradient(160deg, #006ba2 0%, #166a5c 100%);
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100%;
     margin: 0;
+    color: var(--main-text-color);
 }
 
 footer {
     margin-top: auto;
 }
 
-.book-form {
+.book-form-area {
     width: 100%;
-    height: 350px;
-    border: 1px solid rgb(0, 199, 182);
+    height: 550px;
+    background: rgb(20, 28, 40);
+    background: linear-gradient(281deg, rgba(20, 28, 40, 1) 0%, rgba(29, 47, 55, 1) 23%, rgba(29, 47, 55, 1) 60%, rgba(20, 28, 40, 1) 100%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.book-form {
+    background-color: #204947;
+    width: 70%;
+    height: 70%;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.5rem;
+    box-sizing: border-box;
+}
+
+.book-form div {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    width: 15rem;
+}
+.read-status-checkbox{
+    align-items: center;
+}
+
+.book-form input {
+    border-radius: 3px;
+    border-style: none;
+    background-color: #0b2422;
+    color: var(--main-text-color);
+    height: 1.5rem;
+}
+
+.book-form button {
+    width: 100px;
+    height: 50px;
+    border-radius: 10px;
+    border-style: none;
+    background-color: var(--button-bg-color);
+    color: var(--main-text-color);
+    font-family: inherit;
+    font-size: 1rem;
+    font-weight: 700;
+}
+.book-form button:hover {
+    background-color: #00b199;
+}
+
+.book-form button:active {
+    color: black;
+    background-color: #69ffad;
 }
 
 .book-shelf {
@@ -36,11 +100,13 @@ footer {
 .book-shelf .shelf {
     width: 100%;
     height: 30px;
-    border: 1px solid white;
+    border: 3px solid rgb(199, 96, 0);
+    border-radius: .5rem;
+    background-color: #a86026;
 }
 
-.book-shelf .books{
+.book-shelf .books-area {
     width: 100%;
     height: 450px;
-    border: 1px solid rgb(199, 0, 0);
+    border: 2px dashed rgb(199, 0, 0);
 }
