--- a/style.css
+++ b/style.css
@@ -111,5 +111,49 @@ footer {
 .book-shelf .books-area {
     width: 100%;
     height: 450px;
-    border: 2px dashed rgb(199, 0, 0);
+    display: flex;
+    align-items: flex-end;
+}
+
+.book {
+    width: 10%;
+    border-radius: 5px;
+    border: 1px solid black;
+    background-color: #04880f;
+    height: 70%;
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
+    font-size: 1rem;
+    box-sizing: border-box;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.book div {
+    text-align: center;
+}
+
+.book-details {
+    display: flex;
+    justify-content: center;
+    padding: 11% 0;
+    font-weight: 700;
+}
+
+.book-written-read-status {
+    border: 1px solid rgb(54, 54, 54);
+    border-radius: 4px;
+    padding: 5px 0;
+}
+
+.book-is-read {
+    background-color: rgb(0, 255, 0);
+    color: #0b2422;
+}
+
+.book-is-not-read {
+    background-color: red;
 }
