Added book delete functionality

--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ footer {
     width: 10%;
     border-radius: 5px;
     border: 1px solid black;
-    background-color: #04880f;
+    background-color: #88703b;
     height: 70%;
     writing-mode: vertical-rl;
     text-orientation: mixed;
